--- a/index.html
+++ b/index.html
@@ -414,4 +414,4 @@ function consoleText(words, id, colors) {
 </center>
 </div>
 </html>
-<!--Hi wandering traveller, could I interest you in some high-quality goods?-->
+<!--Hi wandering traveller, could I interest you in some high-quality goods? uwu-->
