--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--StyleSheet-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <!--Materialize.css stuff-->
-  <meta name="abstract" content="Kik, Modded Kik, Kik Mod, Pikek, Pikek Night, Night,, Lynx, Lynxkik, Dorcus, Dorcuskek, Matrik, Matrek, Kik hack, Kik hacks, How to Hack kik, How to Mod Kik, Kik mods, Modified Kik, Best modded kik, Kik client, Ewhoring, Hack, Hacks, Hacker"/>
+  <meta name="abstract" content="Redkik, Red Pirho, Red Mods, Reds Mods, Modded Kik, Kik Mod, Pikek, Pikek Night, Night, Lynx, Lynxkik, Dorcus, Dorcuskek, Matrik, Kik hack, Kik hacks, How to Hack kik, How to Mod Kik, Kik mods, Modified Kik, Best modded kik"/>
     <meta name="description" content="RedKik | Placeholder" />
     <meta name="author" content="Red Mods Team"/>
     <meta name="robots" content="index, follow"/>
@@ -357,6 +357,13 @@ function consoleText(words, id, colors) {
   <source src="music/mysterygirl.mp3" type="audio/mpeg">
 </audio>
 <br>
+<blockquote class="flow-text">
+      Twenty One Pilots - Redecorate
+    </blockquote>
+<audio controls>
+  <source src="music/redecorate.mp3" type="audio/mpeg">
+      </audio>
+<br>                                            
 <blockquote class="flow-text">
       Haroinfather - not ur friend
     </blockquote>
