--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ function consoleText(words, id, colors) {
   </div>
   </div>
   </div>
-   <!---------------------Music Player Modal --------------------->
+   <!---------------------Music Player Modal End--------------------->
 
    <!--------------------- Team Modal --------------------->
   <div id="team" class="modal">
