--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 is this website. I did this site free of charge. Why? I think the community for kik devlopment is DEAD and desperately needs some collaboration and a breath of fresh air.
 So while I support the cause, what I do not support is: fake claims of your own abilities to make yourself look cool, or stealing code and claiming it's yours.
 
-This site, as well as Red Mods (the individual), do not align with my personal beliefs or morality. -->
+This site, as well as Red Mods (the individual), do not align with my personal beliefs or morality. ~Alyssa -->
 <html lang="en">
 <title>Red Mods</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
