--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <!DOCTYPE html>
 <!-- README: I do not condone the use of these applications. I also do not, nor am I officially affilated with this project. The ONLY part of this project I have involvement with
 is this website. I did this site free of charge. Why? I think the community for kik devlopment is DEAD and desperately needs some collaboration and a breath of fresh air.
-So while I support the cause, what I do not support is: fake claims of your own abilities to make yourself look cool, or stealing code and claiming it's yours.
-
-This site, as well as Red Mods (the individual), do not align with my personal beliefs or morality. ~Alyssa -->
+So while I support the cause, what I do not support is: fake claims of your own abilities to make yourself look cool, or stealing code and claiming it's yours. 
+There's a clear line between fair use and blatant stealing. This site, as well as Red Mods (the individual), do not align with my personal beliefs or morality. ~Alyssa -->
 <html lang="en">
 <title>Red Mods</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
