--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ function consoleText(words, id, colors) {
     <div class="hide-on-med-and-up"> 
     <font color="white" size="2"> 
       <marquee color="0fe2cf" bgcolor="black" width="400" height="17">
-        WEEEEE
+        Modding/coding is like a art. its fun..
       </marquee>
     </font>
     </div>
