main update owo

--- a/download.html
+++ b/download.html
@@ -298,7 +298,9 @@ function consoleText(words, id, colors) {
       <br>
     <a class="waves-effect waves-night btn-flat modal-trigger pulse " href="redkik.html">Red Kik</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="redpirho.html">Red Pirho [paid]</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="reddos.html">Red DoS [paid]</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="unbrick.html">Unbrick++</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="invincibility2.html">Kik Protection Mod</a><br><br>
     <a class="btn-flat disabled">Kik Modding Guide App by alyssa</a><br><br>
     </div>
     </div>
