--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <!-- README: I do not condone the use of these applications. I also do not, nor am I officially affilated with this project. The ONLY part of this project I have involvement with
 is this website. I did this site free of charge. Why? I think the community for kik devlopment is DEAD and desperately needs some collaboration and a breath of fresh air.
-So while I support the cause, what I do not support is: fake claims of your own abilities to make yourself look cool, or stealing code and claiming it's yours. 
+So while I support the cause, what I do not support is: fake claims of a person's own abilities to make yourself look cool, or stealing code and claiming it's yours. 
 There's a clear line between fair use and blatant stealing. This site, as well as Red Mods (the individual), do not align with my personal beliefs or morality. ~Alyssa -->
 <html lang="en">
 <title>Red Mods</title>
@@ -17,12 +17,15 @@ There's a clear line between fair use and blatant stealing. This site, as well a
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <!--Materialize.css stuff-->
   <meta name="abstract" content="Redkik, Red Pirho, Red Mods, Reds Mods, Modded Kik, Kik Mod, Pikek, Pikek Night, Night, Lynx, Lynxkik, Dorcus, Dorcuskek, Matrik, Kik hack, Kik hacks, How to Hack kik, How to Mod Kik, Kik mods, Modified Kik, Best modded kik"/>
-    <meta name="description" content="RedKik | Placeholder" />
+    <meta name="description" content="Red Mods" />
     <meta name="author" content="Red Mods Team"/>
     <meta name="robots" content="index, follow"/>
     <meta name="revisit-after" content="7 days"/>
-    <link rel="icon" href="placeholder">
-    <link rel="canonical" href="placeholder">
+<!--Assign your website icons here. This is for the favicon and stuff
+  <!-- <link rel="icon" href="redmodsicon.png">
+    <link rel="canonical" href="https://redsmods.tk/"> --> 
+<link rel="icon" href="placeholder">
+    <link rel="canonical" href="https://redsmods.tk/">
     <style>
         .hide-dot {
             color: transparent;
