--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@ function consoleText(words, id, colors) {
     <div class="hide-on-med-and-down">
   <font color="white" size="2"> 
       <marquee  bgcolor="black" width="1400" height="20">
-        WEEEEE
+        Modding/coding is like an art. It's fun...
+<!-- he's lying!!!!! ~alyssa -->
       </marquee>
     </font>
     </div>
@@ -346,7 +347,8 @@ function consoleText(words, id, colors) {
     <div class="hide-on-med-and-up"> 
     <font color="white" size="2"> 
       <marquee color="0fe2cf" bgcolor="black" width="400" height="17">
-        Modding/coding is like a art. its fun..
+        Modding/coding is like an art. It's fun...
+<!-- he's lying!!!!! ~alyssa -->
       </marquee>
     </font>
     </div>
