--- a/index.html
+++ b/index.html
@@ -320,8 +320,9 @@ function consoleText(words, id, colors) {
 
       <!--Extra JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
+<!-- Old Floating Button that was unused -->
         <a class="btn-floating btn-large waves-effect waves-light red right"><i class="zmdi zmdi-code"></i></a>
-
+<!-- Old Floating Button that was unused -->
     </body>
     <!-- Download Modal -->
 <div id="download" class="modal">
