--- a/index.html
+++ b/index.html
@@ -321,8 +321,7 @@ function consoleText(words, id, colors) {
       <!--Extra JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
 <!-- Old Floating Button that was unused -->
-        <a class="btn-floating btn-large waves-effect waves-light red right"><i class="zmdi zmdi-code"></i></a>
-<!-- Old Floating Button that was unused -->
+ <!-- <a class="btn-floating btn-large waves-effect waves-light red right"><i class="zmdi zmdi-code"></i></a>-->
     </body>
     <!-- Download Modal -->
 <div id="download" class="modal">
@@ -349,7 +348,6 @@ function consoleText(words, id, colors) {
     <font color="white" size="2"> 
       <marquee color="0fe2cf" bgcolor="black" width="400" height="17">
         Modding/coding is like an art. It's fun...
-<!-- he's lying!!!!! ~alyssa -->
       </marquee>
     </font>
     </div>
