--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ There's a clear line between fair use and blatant stealing. This site, as well a
   height: 100%;
   top: 0;
   left: 0;
+  overflow: hidden;
 
   background: repeating-linear-gradient(
     to bottom,
@@ -171,6 +172,7 @@ There's a clear line between fair use and blatant stealing. This site, as well a
 @import url(https://fonts.googleapis.com/css?family=Khula:700);
 body {
   background: #111;
+  overflow-x: hidden;
 }
 .hidden {
   opacity:0;
@@ -192,26 +194,14 @@ body {
   margin:auto;
 }
 .console-underscore {
-   display:inline-block;
+  display:inline-block;
   position:relative;
   top:-0.07em;
   left:10px;
-}
-
-    
-    /* .modal-content {
-    border: 1px solid #888;
-    width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    animation-name: animatetop;
-    animation-duration: 0.4s */ 
-    
-  
+} 
     </style>
 </head>
 
-<div class="hide-on-small-only" style="position: fixed; z-index: -99; width: 100%; height: 100%">
-  </div>
 
     <!--Javascript-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -300,7 +290,7 @@ function consoleText(words, id, colors) {
  <body>
     <center>
       <!--------------------- SCAN LINES BACKGROUND --------------------->
-        <div class="scanlines hide-on-med-and-down"></div>
+        <!--<div class="scanlines hide-on-med-and-down"></div>
         <!--- SCAN LINES BACKGROUND END --->
        <hr class="solid" style="height: 0px; width:35%;>
     <!--Desktop Details-->
