deleted some thingsies

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@ function consoleText(words, id, colors) {
       <marquee  bgcolor="black" width="1400" height="20">
         Modding/coding is like an art. It's fun...
 <!-- he's lying!!!!! ~alyssa -->
+  <!-- :0 im not lying its fun! -->                                                      
       </marquee>
     </font>
     </div>
