--- a/redkik.html
+++ b/redkik.html
@@ -289,16 +289,13 @@ function consoleText(words, id, colors) {
      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
  <body>
     <center>
-      <!--- SCAN LINES BACKGROUND --->
-        <div class="scanlines hide-on-med-and-down"></div>
-        <!--- SCAN LINES BACKGROUND END --->
                <style>hr{ height: 0px; width:35%;}</style><hr class="solid">
     <!-- Desktop Details -->
     <div class="row center-align">
       <br>
     <a class="waves-effect waves-light btn-flat modal-trigger " href="#changelog"><i class="zmdi zmdi-collection-text right"></i>Changelog</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="#info"><i class="zmdi zmdi-dns right"></i>Features</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://drive.google.com/drive/folders/17uz5wNchfiinvxLZimqCKDiSwQtqVnZM?usp=sharing"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://doc-0k-0o-docs.googleusercontent.com/docs/securesc/d7u0ua33pnhl3rd7h68t7dhnpsls32gq/nsmsnppmomltgvvce7ohq176u7meclth/1644343275000/16208774358747183583/12473096694599658469/1CkLCOIPNXDKGim16bSSSstuesyOR4Eta?e=download&authuser=0&nonce=e7b3l6ebpeom0&user=12473096694599658469&hash=g0v40g6omb3bt7h160e7mk0ariop2qk5"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
      <!--- Version Chip Small View --->
      <br>
      <br>
