--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ There's a clear line between fair use and blatant stealing. This site, as well a
     <meta name="revisit-after" content="7 days"/>
 <link rel="icon" href="placeholder">
     <link rel="canonical" href="https://redsmods.tk/">
+      
+      <!-- when the time comes we need to move the stylesheet to something that changes universally for all the other html files, it's hard to keep track of all of them and sync them manually. -->
     <style>
         .hide-dot {
             color: transparent;
