fixed download link meow
pp gang

--- a/redkik.html
+++ b/redkik.html
@@ -324,7 +324,7 @@ function consoleText(words, id, colors) {
     <hr align="CENTER" width="90%" size="1">             
 
 
-<a target="_blank" href="download link here "><span class="nyah">Placeholder</span><p>Description</p></a>
+<a target="_blank" href="https://www.mediafire.com/file/4fx7sxg5smmjlj9/RedKik_2.5_Normal.apk/file"><span class="nyah">Placeholder</span><p>Description</p></a>
     </div>
     </div>
   </div>
