--- a/invincibility2.html
+++ b/invincibility2.html
@@ -298,7 +298,7 @@ function consoleText(words, id, colors) {
       <br>
     <a class="waves-effect waves-light btn-flat modal-trigger " href="#changelog"><i class="zmdi zmdi-collection-text right"></i>Updatelog</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="#info"><i class="zmdi zmdi-dns right"></i>Features</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="www.google.com"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/file/ah5ihj1v9l7ai6g/Invincibility%252B%252B%25C2%25B2.apk/file"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
      <!--- Version Chip Small View --->
      <br>
      <br>
