fixed stuff owo

--- a/redkik.html
+++ b/redkik.html
@@ -295,7 +295,7 @@ function consoleText(words, id, colors) {
       <br>
     <a class="waves-effect waves-light btn-flat modal-trigger " href="#changelog"><i class="zmdi zmdi-collection-text right"></i>Changelog</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="#info"><i class="zmdi zmdi-dns right"></i>Features</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://doc-0k-0o-docs.googleusercontent.com/docs/securesc/d7u0ua33pnhl3rd7h68t7dhnpsls32gq/nsmsnppmomltgvvce7ohq176u7meclth/1644343275000/16208774358747183583/12473096694599658469/1CkLCOIPNXDKGim16bSSSstuesyOR4Eta?e=download&authuser=0&nonce=e7b3l6ebpeom0&user=12473096694599658469&hash=g0v40g6omb3bt7h160e7mk0ariop2qk5"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/file/4fx7sxg5smmjlj9/RedKik_2.5_Normal.apk/file"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
      <!--- Version Chip Small View --->
      <br>
      <br>
@@ -324,7 +324,7 @@ function consoleText(words, id, colors) {
     <hr align="CENTER" width="90%" size="1">             
 
 
-<a target="_blank" href="https://www.mediafire.com/file/4fx7sxg5smmjlj9/RedKik_2.5_Normal.apk/file"><span class="nyah">Placeholder</span><p>Description</p></a>
+<a target="_blank" href="download link here"><span class="nyah">Placeholder</span><p>Description</p></a>
     </div>
     </div>
   </div>
