--- a/download.html
+++ b/download.html
@@ -294,6 +294,7 @@ function consoleText(words, id, colors) {
     <div class="row center-align">
       <br>
     <a class="waves-effect waves-night btn-flat modal-trigger pulse " href="redkik.html">Red Kik</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="Voidkik.html">Void Kik</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="redpirho.html">Red Pirho [paid]</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="reddos.html">Red DoS [paid]</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="unbrick.html">Unbrick++</a><br><br>
