--- a/index.html
+++ b/index.html
@@ -396,9 +396,11 @@ function consoleText(words, id, colors) {
   <div class="col s6 m3">
    <a href="http://kik.me/ht7p" target="_blank"><img src="http://profilepics.kik.com/h6lJ-VGsN1lzs9VrvzkfpnGcCEM/orig.jpg" class="circle" width="100%"></a><h4>Alyssa</h4><h6>Website</h6></div>
    </h6></div>
+  <div class="row">
+  <div class="col m3 hide-on-small-only hide-dot">.</div>
   <div class="col s6 m3">
-   <a href="http://kik.me/mangled" target="_blank"><img src="http://profilepics.cf.kik.com/TLyb4TV7VR1AsteSAnSbIB4zSQA/orig.jpg" class="circle" width="100%"></a><h4>Void</h4><h6>Mods and Websites</h6></div>
-  </div><br>
+   <a href="http://kik.me/mangled" target="_blank"><img src="http://profilepics.cf.kik.com/TLyb4TV7VR1AsteSAnSbIB4zSQA/orig.jpg" class="circle" width="95%"></a><h4>Void</h4><h6>Mods and Websites</h6>
+ </div>
  </div>
 </div>
 </div>
