--- a/Voidkik.html
+++ b/Voidkik.html
@@ -294,7 +294,7 @@ function consoleText(words, id, colors) {
       <br>
     <a class="waves-effect waves-light btn-flat modal-trigger " href="#changelog"><i class="zmdi zmdi-collection-text right"></i>Changelog</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="#info"><i class="zmdi zmdi-dns right"></i>Features</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="www.google.com"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://mega.nz/file/4IAQzDJB#Yr1PjEzL7d6yuxa8pG0qXyR_wuvQjWVRyht18YqJT64"><i class="zmdi zmdi-download right"></i>Download</a><br><br>
      <!--- Version Chip Small View --->
      <br>
      <br>
