--- a/download.html
+++ b/download.html
@@ -294,10 +294,10 @@ function consoleText(words, id, colors) {
     <div class="row center-align">
       <br>
     <a class="waves-effect waves-night btn-flat modal-trigger pulse " href="redkik.html">Red Kik</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="Voidkik.html">Void Kik</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="redpirho.html">Red Pirho [paid]</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="unbrick.html">Unbrick++</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="invincibility2.html">Kik Protection Mod</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="Link Here"><i class="zmdi zmdi-download right"></i>GTA Griefer Protection Menu</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/file/1blkn8khaqlg7er/K_Guide_base.apk/file"><i class="zmdi zmdi-download right"></i>K Guide+, by alyssa</a><br><br>
                                                                                          
     </div>
