--- a/apks.html
+++ b/apks.html
@@ -213,7 +213,7 @@ body {
             <div class="col s1 m3">.</div>
             <br>
 
-        </div><style> h1 { color: white; letter-spacing: 0px; font-size: 500%; height: 50px; } </style><h1></h1>
+        </div><style> h1 { color: white; letter-spacing: 0px; font-size: 500%; height: 50px; } </style><h1>Downloads</h1>
         <!--- LARGE VIEW --->
         <div class="hide-on-med-and-down"
         <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
