--- a/download.html
+++ b/download.html
@@ -213,7 +213,7 @@ body {
             <div class="col s1 m3">.</div>
             <br>
 
-        </div><style> h1 { color: white; letter-spacing: 0px; font-size: 500%; height: 50px; } </style><h1>Download</h1>
+        </div><style> h1 { color: white; letter-spacing: 0px; font-size: 500%; height: 50px; } </style><h1></h1>
         <!--- LARGE VIEW --->
         <div class="hide-on-med-and-down"
         <div class='console-container'><span id='text'></span><div class='console-underscore' id='console'>&#95;</div></div>
@@ -293,15 +293,9 @@ function consoleText(words, id, colors) {
     <!--Desktop Details-->
     <div class="row center-align">
       <br>
-    <a class="waves-effect waves-night btn-flat modal-trigger pulse " href="redkik.html">Red Kik</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="redpirho.html">Red Pirho [paid]</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="unbrick.html">Unbrick++</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="invincibility2.html">Kik Protection Mod</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="Link Here"><i class="zmdi zmdi-download right"></i>Graal Era Mod Menu</a><br><br> 
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="Link Here"><i class="zmdi zmdi-download right"></i>GTA Mod Menu</a><br><br> 
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="Link Here"><i class="zmdi zmdi-download right"></i>GTA Griefer Protection Menu</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/file/1blkn8khaqlg7er/K_Guide_base.apk/file"><i class="zmdi zmdi-download right"></i>K Guide+, by alyssa</a><br><br>
-                                                                                         
+    <a class="waves-effect waves-night btn-flat modal-trigger pulse " href="apks.html">Apks</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="gameguardian.html">Game Guardian Scripts</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="unbrick.html">Unbrick++</a><br><br>                                                                                     
     </div>
     </div>
       </div>
