--- a/apks.html
+++ b/apks.html
@@ -296,6 +296,7 @@ function consoleText(words, id, colors) {
     <a class="waves-effect waves-night btn-flat modal-trigger pulse " href="redkik.html">Red Kik</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="redpirho.html">Red Pirho [paid]</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="Link Here"><i class="zmdi zmdi-download right"></i>GTA Griefer Protection Menu</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="RedboxRoblox.html"><i class="zmdi zmdi-download right"></i>RedBox DLL/Script Injector</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/file/1blkn8khaqlg7er/K_Guide_base.apk/file"><i class="zmdi zmdi-download right"></i>K Guide+, by alyssa</a><br><br>
                                                                                          
     </div>
