--- a/RedboxRoblox.html
+++ b/RedboxRoblox.html
@@ -333,7 +333,6 @@ function consoleText(words, id, colors) {
   <div id="info" class="modal">
     <div class="modal-content">
   <div class="center-align">
-<b><h4>Tabs</b></h4><br><br>
                 
                     <br><b><h4>Level 6-7-8 Executor</b></h4><br><br>
                     
@@ -362,8 +361,8 @@ function consoleText(words, id, colors) {
     <hr align="LEFT" width="50%" size="1">
     v1.0 [//]<br>
     ◇Released<br>
-    ◇<br>
-    ◇<br>
+    ◇more scripts<br>
+    ◇More Hubs<br>
     ◇<br>
     ◇<br>
     ◇<br>
@@ -371,7 +370,7 @@ function consoleText(words, id, colors) {
     ◇<br>
 <div class="modal-content" align="left"><br>
   <hr align="LEFT" width="100%" size="1">
-One of the smoothest Exploit Injectors!                           
+Virus Free! Keyless!                           
     </div>
   </div>
 </div>
