--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@ function consoleText(words, id, colors) {
   <div class="row">
   <div class="col m3 hide-on-small-only hide-dot">.</div>
   <div class="col s6 m3">
+  <!-- surprises!? soon!? -->
 <br> 
 </div>
  </div>
@@ -410,3 +411,4 @@ function consoleText(words, id, colors) {
 </div>
 </html>
 <!--This Website was made by Alyssa and Red. Alyssa as the main website Dev-->
+                        
