--- a/download.html
+++ b/download.html
@@ -295,6 +295,7 @@ function consoleText(words, id, colors) {
       <br>
     <a class="waves-effect waves-night btn-flat modal-trigger pulse " href="apks.html">Apks</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="gameguardian.html">Game Guardian Scripts</a><br><br>
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="Other.html">Other</a><br><br>
     <a class="waves-effect waves-night btn-flat modal-trigger " href="unbrick.html">Unbrick++</a><br><br>                                                                                     
     </div>
     </div>
