--- a/Other.html
+++ b/Other.html
@@ -295,7 +295,7 @@ function consoleText(words, id, colors) {
       <br>
     
     <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/file/501qv3t7vgh0782/DDos.py/file"><i class="zmdi zmdi-download right"></i>Python DDoS Tool</a><br><br>
-    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/file/501qv3t7vgh0782/DDos.py/file"><i class="zmdi zmdi-download right"></i>Batch MultiTool</a><br><br>                                                                                                                
+    <a class="waves-effect waves-night btn-flat modal-trigger " href="https://www.mediafire.com/folder/gpf2k91prr0bu/Reds+multitool+Batch"><i class="zmdi zmdi-download right"></i>Batch MultiTool</a><br><br>                                                                                                                
     </div>
     </div>
       </div>
